[project]
name = "wechat-md-mcp-server"
version = "0.1.0"
description = "Markdown to WeChat HTML MCP server"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
wechat-md-mcp-server = "wechat_mcp_server:main"
wechat-mcp-server = "wechat_mcp_server:main"
wechat-md-convert = "wechat_convert:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["wechat_mcp_server.py", "wechat_convert.py"]

[tool.hatch.build.targets.sdist]
include = [
  "wechat_mcp_server.py",
  "wechat_convert.py",
  "README.md",
  "pyproject.toml",
]
