[project]
name = "wechat-md-mcp-server"
version = "0.2.0"
description = "Markdown to WeChat HTML MCP server"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "xiangming" }]
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
wechat-md-mcp-server = "server:main"
wechat-md-convert = "wechat_convert:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "wechat_convert.py", "wechat_md_mcp/**/*.py"]

[tool.hatch.build.targets.sdist]
include = [
  "server.py",
  "wechat_convert.py",
  "wechat_md_mcp/**/*.py",
  "README.md",
  "pyproject.toml",
]
